<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_gradient_bg"
    tools:context=".activity.VerificationOtpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_20dp"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_white_24dp"
                android:padding="@dimen/space_5dp"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/space_24dp"
                android:padding="@dimen/space_5dp"
                android:layout_gravity="center"
                android:background="@drawable/drawble_circle_bg"
                android:src="@drawable/rithala_motra" />


            <TextView
                style="@style/headerText"
                android:id="@+id/login_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_30dp"
                android:text="OTP Verification"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <View
                android:layout_width="180dp"
                android:layout_marginTop="@dimen/space_2dp"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_height="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/please_enter_the_otp_sent_to_your_mobile_number"
                android:textSize="@dimen/space_16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_gravity="center"
                android:text="+91-8907696900"
                android:textSize="@dimen/space_18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/space_10dp"/>


            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="@string/enter_id"
                android:background="@drawable/drawbale_rectangle_white_bg"
                android:hint="@string/enter_otp"
                android:paddingHorizontal="@dimen/space_12dp"
                android:paddingVertical="@dimen/space_12dp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/space_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:text="@string/time_left_1_41"
                android:textSize="@dimen/space_16sp"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/red"
                android:background="@drawable/drawbale_rectangle_white_bg"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/submit"
                android:textSize="18sp"
                android:textAllCaps="false" />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_register"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/space_10dp"
            android:layout_marginBottom="@dimen/space_20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/do_not_share_this_one_time_password_with_anybody"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="18sp"/>
            </LinearLayout>
        </RelativeLayout>
        </RelativeLayout>


    </ScrollView>


</RelativeLayout>